[update]Listクラスの使用するメソッドを変更